[package]
name = "hotel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
json = "0.12.4"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_xoshiro = "0.6.0"
